# rocm-xio

./: .clang-format  .codespellrc  .gitignore  .gitmodules  .readthedocs.yaml  .spellcheck.yml  .wordlist.txt  AGENTS.md  BENCHMARK_SUITE_COMPLETE.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  CLANG_FORMAT_FIXES.md  CMakeLists.rccl.txt  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  COMMIT_SUMMARY.txt  CONTRIBUTING.md  FRIDAY_WRAP_UP.md  INSTALL.md  INSTALLATION_COMPLETE.md  LICENSE.md  Makefile  NVMe_Testing_Report.md  PROJECT_STATUS_GPU_EMULATED_NVME.md  QUICKSTART_GPU_EMULATED_NVME.md  QUICK_START.md  README.md  README_UPDATE_SUMMARY.md  Real_Hardware_Validation_Report.md  SECURITY.md  STEPHEN_DID_GPU_TO_EMULATED_NVME.md  STYLEGUIDE.md  TESTING-DEBUG-NOTES.md  TESTING_SUMMARY.md  WORDLIST_UPDATE_SUMMARY.md  WSL_INSTALLATION.md  commit-clang-format.sh  commit-gpu-emulated-nvme.sh  (+12 more)
.alola/: .alola-exclude  monitor-alola-jobs.sh  rocm-xio-alola.py  rocm-xio-tests-nvme-ep.sbatch  rocm-xio-tests.basic-tests.sbatch  rocm-xio-tests.common  rocm-xio-tests.integration.sbatch  rocm-xio-tests.nvme-ep.sbatch  rocm-xio-tests.rdma-ep-2node.sbatch  rocm-xio-tests.rdma-ep-batch.sbatch  rocm-xio-tests.rdma-ep.sbatch  rocm-xio-tests.sbatch  rocm-xio-tests.sdma-ep-allgather.sbatch  rocm-xio-tests.sdma-ep.sbatch  rocm-xio-tests.single-gpu.sbatch  rocm-xio-tests.test-ep.sbatch  rocm-xio-tests.two-gpu.sbatch  run-alola-tests.sh
.github/: CODEOWNERS
WIP-doca/: HIPIFICATION_COMPLETE_SUMMARY.md
benchmark/: QUICK_START.md  README.md  VISUALIZATION_GUIDE.md  nvme_benchmark.py  serve.py  visualizer.py
cmake/: CodeGeneration.cmake  EndpointDiscovery.cmake  UtilityTargets.cmake  XIOBnxtDirectVerbs.cmake  XIOBnxtKernelModule.cmake  XIOClangCompilerOptions.cmake  XIOCodeGeneration.cmake  XIOCompilerOptions.cmake  XIODetectGPUs.cmake  XIODocumentation.cmake  XIOEndpointDiscovery.cmake  XIOErnicDirectVerbs.cmake  (+19 more)
endpoints/: CMakeLists.txt
endpoints/nvme-ep/: nvme-ep-cli.h  nvme-ep-config.h  nvme-ep.h  nvme-ep.hip
endpoints/rdma-ep/: README.md
endpoints/rdma-ep/bnxt/: bnxt-rdma.h
endpoints/rdma-ep/ionic/: ionic-rdma.h
endpoints/rdma-ep/mlx/: mlx5-rdma.h
endpoints/rdma-ep/pvrdma/: pvrdma-rdma.h
endpoints/sdma-ep/: sdma-ep.hip
endpoints/test-ep/: README.md  test-ep.h  test-ep.hip
examples/endpoint-info/: CMakeLists.txt  endpoint-info.hip
examples/find-package/: CMakeLists.txt
examples/list-endpoints/: CMakeLists.txt  list-endpoints.hip
examples/nvme-ep-info/: CMakeLists.txt  nvme-ep-info.hip
examples/sdma-ep-allgather/: CMakeLists.txt  sdma-ep-allgather.hip
examples/sdma-ep-p2p/: CMakeLists.txt  sdma-ep-p2p.hip
gda-experiments/nvme-gda/: CMakeLists.txt  COMPARISON_WITH_MLX5.md  QUICKSTART.md  README.md
gda-experiments/nvme-gda/include/: nvme_gda.h
gda-experiments/nvme-gda/nvme_gda_driver/: .Module.symvers.cmd  .modules.order.cmd  .nvme_gda.ko.cmd  .nvme_gda.mod.cmd  .nvme_gda.mod.o.cmd  .nvme_gda.o.cmd  Makefile  nvme_gda.c  nvme_gda.h  nvme_gda.ko  nvme_gda.mod  nvme_gda.mod.c
gda-experiments/nvme-gda/tests/: test_basic_doorbell.hip  test_gpu_io.hip
src/endpoints/sdma-ep/from-rad-6df07028/: CMakeLists.txt
src/endpoints/sdma-ep/from-rad-6df07028/include/: anvil.hpp  anvil_device.hpp
src/endpoints/sdma-ep/from-rad-6df07028/include/common/: sdma_pkt_struct.h
src/endpoints/sdma-ep/from-rad-6df07028/src/: anvil.cpp
src/tester/: CMakeLists.txt  axiio-tester.cpp  axiio-tester.h  axiio-tester.hip  doca-gin-atomic-test.hip  doca-gin-doorbell-proxy-nic-test.hip  doca-gin-doorbell-test.hip  doca-gin-wqe-test.hip  gpu-doorbell-map.h  kernel-gpu-doorbell.h  nvme-axiio-simple.h  nvme-device-helper.h  nvme-gpu-doorbell-dmabuf.h  nvme-gpu-doorbell-gda.h  nvme-queue-manager.h  nvme-random-io.h  nvme-trace-verifier.h  rdma-ep-tester.hip  test_dmabuf_doorbell  test_dmabuf_doorbell_gda  test_dmabuf_doorbell_gpu_fd  xio-cli-options.cpp  xio-cli-options.h  xio-tester.cpp
src/tester/doca-tests-rocprof-output/pftrace/doorbell/: doorbell_results.json  doorbell_results.pftrace
src/tester/doca-tests-rocprof-output/pftrace/proxy-nic/: proxy-nic_results.json  proxy-nic_results.pftrace
src/tester/doca-tests-rocprof-output/pftrace/wqe/: wqe_results.json  wqe_results.pftrace
tester/: CMakeLists.txt  axiio-tester.hip  benchmark-latency.sh  check-nvme-status.cpp  cpu-nvme-io.h  dump-queue-test.cpp  gpu-doorbell-map.h  gpu-mmio-access.h  nvme-axiio-kernel.h  nvme-gpu-doorbell-gda.h  nvme-gpu-doorbell-hsa.h  nvme-queue-detect.h  nvme-queue-manager.h  nvme-random-io.h  nvme-smart-check.h  nvme-trace-verifier.h  pcie-atomics-check.h  test-nvme-write-read-verify.cpp  test_dmabuf_doorbell_v2  test_gpu_doorbell_complete  test_gpu_doorbell_with_hsa  test_rocshmem_style_doorbell
tester/src/: axiio-tester.hip
tests/: CMakeLists.txt  cq-wrap-test.c
tests/integration/: CMakeLists.txt
tests/system/: CMakeLists.txt
tests/system/coherence/: CMakeLists.txt  test-doorbell-coherence.hip
tests/system/nvme-ep/: CMakeLists.txt  run-nvme-script-test.sh  run-nvme-smoke-test.sh
tests/system/rdma-ep/: CMakeLists.txt  run-rdma-script-test.sh
tests/system/test-ep/: CMakeLists.txt  test-ep-emulate.hip
tests/unit/: CMakeLists.txt
tests/unit/common/: CMakeLists.txt  test-data-pattern.hip  test-endpoint-registry.hip  test-extract-endpoint.hip  test-rdma-topology.hip  test-rocm-xio-uapi-layout.hip  xio-test-assert.h
tests/unit/nvme-ep/: CMakeLists.txt  test-nvme-config.hip  test-nvme-ep-simple-io.hip  test-nvme-hardware.hip  test-nvme-helpers.hip
tests/unit/rdma-ep/: CMakeLists.txt  detect-pci-vendor.hpp  run-2node-test.sh  test-bnxt-sizing.hip  test-rdma-2node.hip  test-rdma-bnxt-loopback.hip  test-rdma-common.hip  test-rdma-config.hip  test-rdma-cqe-generation.hip  test-rdma-endian.hip  test-rdma-ernic-loopback.hip  test-rdma-ionic-loopback.hip  test-rdma-loopback.hip  test-rdma-queue-ops.hip  test-rdma-vendors.hip  test-rdma-wqe-cqe.hip
tests/unit/test-ep/: CMakeLists.txt  test-ep-config.hip
tests/vm-utils/: check_ioctl_define.c  test_dma_alloc.c  test_nvme_complete.c
(+493 files in other folders)
